tests/compile-fail/bitflags_redefined.rs
#[macro_use]
extern crate bitflags;

bitflags! {
    pub struct Flags1: u32 {
        const A = 1;
    }
}

bitflags! {
    pub struct Flags1: u32 {
        const A = 1;
    }
}
